add diagnoses list fragment, diagnoses adapter and navigation

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,7 +32,10 @@
     <string name="patient_blood_type" lang="en">patient_blood_type</string>
     <string name="patient_doctor" lang="en">patient_doctor</string>
     <string name="prescriptions" lang="en">Prescriptions</string>
-    <string name="date" lang ="en">DD/MM/YYYY</string>
-    <string name="doctor" lang ="en">Doctor Name - Specialty</string>
+    <string name="date" lang="en">DD/MM/YYYY</string>
+    <string name="doctor" lang="en">Doctor Name - Specialty</string>
+    <string name="past_diagnoses">Past Diagnoses</string>
+    <string name="diagnoses_text">Diagnosis</string>
+
 
 </resources>
