Add functionality for diagnosis & diagnoses screens

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,5 +34,7 @@
     <string name="prescriptions" lang="en">Prescriptions</string>
     <string name="date" lang ="en">DD/MM/YYYY</string>
     <string name="doctor" lang ="en">Doctor Name - Specialty</string>
+    <string name="serialized_prescriptions" lang ="en">serialized_prescriptions</string>
+    <string name="prescription_clicked" lang ="en">prescription_clicked</string>
 
 </resources>
