--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,9 +33,13 @@
     <string name="patient_blood_type" lang="en">patient_blood_type</string>
     <string name="patient_doctor" lang="en">patient_doctor</string>
     <string name="prescriptions" lang="en">Prescriptions</string>
-    <string name="date" lang ="en">DD/MM/YYYY</string>
-    <string name="doctor" lang ="en">Doctor Name - Specialty</string>
+    <string name="date" lang="en">DD/MM/YYYY</string>
+    <string name="doctor" lang="en">Doctor Name - Specialty</string>
+    <string name="past_diagnoses" lang = "en">Past Diagnoses</string>
+    <string name="diagnoses_text" lang = "en">Diagnosis</string>
     <string name="serialized_prescriptions" lang ="en">serialized_prescriptions</string>
     <string name="prescription_clicked" lang ="en">prescription_clicked</string>
+    <string name="serialized_diagnoses" lang ="en">serialized_diagnoses</string>
+    <string name="diagnosis_clicked" lang ="en">diagnosis_clicked</string>
 
 </resources>
