--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,7 +32,7 @@
     <string name="patient_amka" lang="en">patient_amka</string>
     <string name="patient_blood_type" lang="en">patient_blood_type</string>
     <string name="patient_doctor" lang="en">patient_doctor</string>
-    <<string name="hospitals" lang="en">Select Hospital</string>
+    <string name="hospitals" lang="en">Select Hospital</string>
     <string name="hospital_name" lang="en">Hospital Name</string>
     <string name="hospital_location" lang="en">Location</string>
     <string name="prescriptions" lang="en">Prescriptions</string>
