--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,6 +32,9 @@
     <string name="patient_amka" lang="en">patient_amka</string>
     <string name="patient_blood_type" lang="en">patient_blood_type</string>
     <string name="patient_doctor" lang="en">patient_doctor</string>
+    <string name="hospitals" lang="en">Select Hospital</string>
+    <string name="hospital_name" lang="en">Hospital Name</string>
+    <string name="hospital_location" lang="en">Location</string>
     <string name="prescriptions" lang="en">Prescriptions</string>
     <string name="date" lang="en">DD/MM/YYYY</string>
     <string name="doctor" lang="en">Doctor Name - Specialty</string>
@@ -39,6 +42,10 @@
     <string name="diagnoses_text" lang = "en">Diagnosis</string>
     <string name="serialized_prescriptions" lang ="en">serialized_prescriptions</string>
     <string name="prescription_clicked" lang ="en">prescription_clicked</string>
+    <string name="serialized_professions" lang ="en">serialized_professions</string>
+    <string name="profession_id_clicked" lang ="en">profession_id_clicked</string>
+    <string name="serialized_hospitals" lang ="en">serialized_hospitals</string>
+    <string name="hospital_id_clicked" lang ="en">hospital_id_clicked</string>
     <string name="serialized_diagnoses" lang ="en">serialized_diagnoses</string>
     <string name="diagnosis_clicked" lang ="en">diagnosis_clicked</string>
 
