--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,5 +48,7 @@
     <string name="hospital_id_clicked" lang ="en">hospital_id_clicked</string>
     <string name="serialized_diagnoses" lang ="en">serialized_diagnoses</string>
     <string name="diagnosis_clicked" lang ="en">diagnosis_clicked</string>
+    <string name="specialty" lang ="en">Specialty</string>
+    <string name="professions" lang = "en">Select Doctor Specialty</string>
 
 </resources>
