add calendar ui screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -72,6 +72,7 @@
     <string name="diagnosis_details">Diagnosis Details</string>
     <string name="diagnosis_text">Diagnosis\ndetails\ntext\nshould\nbe\nhere</string>
     <string name="prescription">Prescription</string>
+    <string name="select_date">Select Date</string>
 
 
 </resources>
