--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,58 +1,51 @@
 <resources>
+
+    <!--  Shared prefs strings  -->
+    <string name="auth_token" lang="en">auth_token</string>
+    <string name="patient_id" lang="en">patient_id</string>
+    <string name="serialized_prescriptions" lang="en">serialized_prescriptions</string>
+    <string name="serialized_diagnoses" lang="en">serialized_diagnoses</string>
+    <string name="serialized_appointments" lang="en">serialized_appointments</string>
+    <string name="serialized_professions" lang="en">serialized_professions</string>
+    <string name="serialized_hospitals" lang="en">serialized_hospitals</string>
+    <string name="prescription_id_clicked" lang="en">prescription_id_clicked</string>
+    <string name="diagnosis_id_clicked" lang="en">diagnosis_id_clicked</string>
+    <string name="profession_id_clicked" lang="en">profession_id_clicked</string>
+    <string name="hospital_id_clicked" lang="en">hospital_id_clicked</string>
+    <string name="doctor_id_clicked" lang="en">doctor_id_clicked</string>
+
+    <!--  Welcome screen UI strings  -->
     <string name="app_name">OkDoc</string>
     <string name="welcome_message_first_line" lang="en">Welcome to</string>
     <string name="welcome_message_second_line" lang="en">OkDoc!</string>
     <string name="amka_field_message" lang="en">Enter your AMKA to proceed</string>
     <string name="get_started_button" lang="en">Get started</string>
-    <string name="past_diagnoses_button" lang="en">Past\nDiagnoses</string>
-    <string name="prescriptions_button" lang="en">Prescriptions</string>
-    <string name="view_appointments_button" lang="en">View\nAppointments</string>
-    <string name="schedule_appointment_button" lang="en">Schedule\nAppointment</string>
-    <string name="default_home_greeting" lang="en">👋🏻 Hi </string>
-    <string name="settings_languages" lang="en">Languages</string>
-    <string name="settings_credits" lang="en">Credits</string>
-    <string name="settings_logout" lang="en">Logout</string>
+
+    <!--  Profile screen UI strings  -->
     <string name="profile_full_name" lang="en">Full Name</string>
     <string name="profile_AMKA" lang="en">AMKA</string>
     <string name="profile_blood_type" lang="en">Blood Type</string>
     <string name="profile_family_doctor" lang="en">Family Doctor</string>
-    <string name="auth_token" lang="en">auth_token</string>
-    <string name="patient_id" lang="en">patient_id</string>
-    <string name="prescription_header" lang="en">DD/MM/YY</string>
-    <string name="prescription_title" lang="en">Prescription Title</string>
-    <string name="doctor_name" lang="en">Doctor Name</string>
+
+    <!--  Home screen UI strings  -->
+    <string name="default_home_greeting" lang="en">👋🏻 Hi </string>
+    <string name="past_diagnoses_button" lang="en">Past\nDiagnoses</string>
+    <string name="prescriptions_button" lang="en">Prescriptions</string>
+    <string name="view_appointments_button" lang="en">View\nAppointments</string>
+    <string name="schedule_appointment_button" lang="en">Schedule\nAppointment</string>
+
+    <!--  Diagnosis screen UI strings  -->
     <string name="doctor_specialty" lang="en">Specialty</string>
+    <string name="doctor_name" lang="en">Doctor Name</string>
     <string name="diagnosis" lang="en">Diagnosis</string>
-    <string name="assigned_medication" lang="en">Assigned Medication</string>
-    <string name="medicine_title" lang="en">Medicine Title</string>
-    <string name="dosage" lang="en">Num per day</string>
-    <string name="duration" lang="en">Day DD/MM until Day DD/MM</string>
-    <string name="patient_name" lang="en">patient_name</string>
-    <string name="patient_last_name" lang="en">patient_last_name</string>
-    <string name="patient_amka" lang="en">patient_amka</string>
-    <string name="patient_blood_type" lang="en">patient_blood_type</string>
-    <string name="patient_doctor" lang="en">patient_doctor</string>
-    <string name="hospitals" lang="en">Select Hospital</string>
-    <string name="hospital_name" lang="en">Hospital Name</string>
-    <string name="hospital_location" lang="en">Location</string>
-    <string name="prescriptions" lang="en">Prescriptions</string>
-    <string name="date" lang="en">DD/MM/YYYY</string>
-    <string name="doctor" lang="en">Doctor Name - Specialty</string>
-    <string name="past_diagnoses" lang="en">Past Diagnoses</string>
-    <string name="diagnoses_text" lang="en">Diagnosis</string>
-    <string name="serialized_prescriptions" lang="en">serialized_prescriptions</string>
-    <string name="prescription_clicked" lang="en">prescription_clicked</string>
-    <string name="serialized_appointments" lang="en">serialized_appointments</string>
-    <string name="serialized_professions" lang="en">serialized_professions</string>
-    <string name="profession_id_clicked" lang="en">profession_id_clicked</string>
-    <string name="serialized_hospitals" lang="en">serialized_hospitals</string>
-    <string name="hospital_id_clicked" lang="en">hospital_id_clicked</string>
-    <string name="doctor_id_clicked" lang="en">doctor_id_clicked</string>
-    <string name="serialized_diagnoses" lang="en">serialized_diagnoses</string>
-    <string name="diagnosis_clicked" lang="en">diagnosis_clicked</string>
-    <string name="specialty" lang="en">Specialty</string>
-    <string name="professions" lang="en">Select Doctor Specialty</string>
-    <string name="doctors" lang="en">Select Doctor</string>
+    <string name="prescription">Prescription</string>
+
+    <!--  Settings screen UI strings  -->
+    <string name="settings_languages" lang="en">Languages</string>
+    <string name="settings_credits" lang="en">Credits</string>
+    <string name="settings_logout" lang="en">Logout</string>
+
+    <!--  Credits UI strings  -->
     <string name="developed_by">Developed by</string>
     <string name="team_members">
         <![CDATA[
@@ -67,12 +60,40 @@
         Jim Skretas Kazakis<br></br>
         ]]>
     </string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="diagnosis_details">Diagnosis Details</string>
-    <string name="diagnosis_text">Diagnosis\ndetails\ntext\nshould\nbe\nhere</string>
-    <string name="prescription">Prescription</string>
+
+    <!--  Create appointment screens  -->
+    <!--  Professions screen UI strings  -->
+    <string name="professions" lang="en">Select Doctor Specialty</string>
+
+    <!--  Hospitals screen UI strings  -->
+    <string name="hospitals" lang="en">Select Hospital</string>
+
+    <!--  Doctors screen UI strings  -->
+    <string name="doctors" lang="en">Select Doctor</string>
+
+    <!--  Calendar screen UI strings  -->
     <string name="select_date">Select Date</string>
 
+    <!-- Placeholder text -->
+    <string name="date" lang="en">DD/MM/YYYY</string>
+    <string name="prescription_header" lang="en">DD/MM/YY</string>
+    <string name="prescription_title" lang="en">Prescription Title</string>
+    <string name="doctor" lang="en">Doctor Name - Specialty</string>
+    <string name="diagnosis_text">Diagnosis\ndetails\ntext\nshould\nbe\nhere</string>
+    <string name="assigned_medication" lang="en">Assigned Medication</string>
+    <string name="medicine_title" lang="en">Medicine Title</string>
+    <string name="dosage" lang="en">Num per day</string>
+    <string name="duration" lang="en">Day DD/MM until Day DD/MM</string>
+    <string name="patient_name" lang="en">patient_name</string>
+    <string name="patient_last_name" lang="en">patient_last_name</string>
+    <string name="patient_amka" lang="en">patient_amka</string>
+    <string name="patient_blood_type" lang="en">patient_blood_type</string>
+    <string name="patient_doctor" lang="en">patient_doctor</string>
+    <string name="hospital_name" lang="en">Hospital Name</string>
+    <string name="hospital_location" lang="en">Location</string>
+    <string name="past_diagnoses" lang="en">Past Diagnoses</string>
+    <string name="diagnoses_text" lang="en">Diagnosis</string>
+    <string name="diagnosis_details">Diagnosis Details</string>
+    <string name="specialty" lang="en">Specialty</string>
 
 </resources>
