--- a/app/src/main/res/values-el-rGR/strings.xml
+++ b/app/src/main/res/values-el-rGR/strings.xml
@@ -20,4 +20,5 @@
     <string name="hospitals">Διάλεξε Νοσοκομείο</string>
     <string name="doctors">Διάλεξε Γιατρό</string>
     <string name="select_date">Διάλεξε Ημέρα</string>
+    <string name="confirm">Επόμενο</string>
 </resources>
