--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,7 @@
     <string name="profession_id_clicked" lang="en" translatable="false">profession_id_clicked</string>
     <string name="hospital_id_clicked" lang="en" translatable="false">hospital_id_clicked</string>
     <string name="doctor_id_clicked" lang="en" translatable="false">doctor_id_clicked</string>
+    <string name="date_clicked" lang="en" translatable="false">date_clicked</string>
 
     <!--  Welcome screen UI strings  -->
     <string name="app_name" translatable="false">OkDoc</string>
