add confirmed screen
fix hospital icon for confirmed fragment and hospital fragment

--- a/app/src/main/res/values-el-rGR/strings.xml
+++ b/app/src/main/res/values-el-rGR/strings.xml
@@ -25,5 +25,9 @@
     <string name="confirmation">Επιβεβαίωση</string>
     <string name="confirmation_text">Πρόκειται να κλείσεται το παρακάτω ραντεβού:</string>
     <string name="cancel">Άκυρο</string>
+    <string name="confirmed">Επιτυχία</string>
+    <string name="appointment_scheduled">Το ραντεβού έκλεισε\nμε επιτυχία</string>
+
+
 
 </resources>
