add error fragment ui and avatar change
- add error fragment
- add male avatar
- change avatar based on gender (last amka digit) in home fragment and profile fragment
- add utils package
- add avatar change fun to utils
- add date string format to utils

--- a/app/src/main/res/values-el-rGR/strings.xml
+++ b/app/src/main/res/values-el-rGR/strings.xml
@@ -27,6 +27,8 @@
     <string name="cancel">Άκυρο</string>
     <string name="confirmed">Επιτυχία</string>
     <string name="appointment_scheduled">Το ραντεβού έκλεισε\nμε επιτυχία</string>
+    <string name="something_went_wrong">Κάτι πήγε στραβά :(\nΠαρακαλώ προσπαθήστε ξανά</string>
+
 
 
 
