--- a/app/src/main/res/values-el-rGR/strings.xml
+++ b/app/src/main/res/values-el-rGR/strings.xml
@@ -28,8 +28,9 @@
     <string name="confirmed">Επιτυχία</string>
     <string name="appointment_scheduled">Το ραντεβού έκλεισε\nμε επιτυχία</string>
     <string name="something_went_wrong">Κάτι πήγε στραβά :(\nΠαρακαλώ προσπαθήστε ξανά</string>
-
-
+    <string name="english">Αγγλικά</string>
+    <string name="greek">Ελληνικά</string>
+    <string name="reason_field_message">Λόγος (Προαιρετικό)</string>
 
 
 </resources>
