--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
 
     <!--  Shared prefs strings  -->
+    <string name="language" lang="en" translatable="false">language</string>
     <string name="auth_token" lang="en" translatable="false">auth_token</string>
     <string name="patient_id" lang="en" translatable="false">patient_id</string>
     <string name="serialized_prescriptions" lang="en" translatable="false">serialized_prescriptions</string>
@@ -67,6 +68,10 @@
         ]]>
     </string>
 
+    <!--  Languages UI strings  -->
+    <string name="english" lang="en">English</string>
+    <string name="greek" lang="en">Greek</string>
+
     <!--  Create appointment screens  -->
     <!--  Professions screen UI strings  -->
     <string name="professions" lang="en">Select Doctor Specialty</string>
@@ -122,6 +127,8 @@
     <string name="specialty" lang="en" translatable="false">Specialty</string>
     <string name="hours" lang="en" translatable="false">HH:MM - HH:MM</string>
     <string name="time" translatable="false">9:00 am</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 
 </resources>
